--- a/mydbflute/dbflute-1.x/templates/om/java/plugin/esflute/allcommon/EsAbstractBehavior.vm
+++ b/mydbflute/dbflute-1.x/templates/om/java/plugin/esflute/allcommon/EsAbstractBehavior.vm
@@ -27,6 +27,7 @@ import org.dbflute.cbean.result.ListResultBean;
 import org.dbflute.exception.FetchingOverSafetySizeException;
 import org.dbflute.exception.IllegalBehaviorStateException;
 import org.dbflute.util.DfTypeUtil;
+import org.elasticsearch.action.admin.indices.refresh.RefreshResponse;
 import org.elasticsearch.action.bulk.BulkItemResponse;
 import org.elasticsearch.action.bulk.BulkRequestBuilder;
 import org.elasticsearch.action.bulk.BulkResponse;
@@ -49,7 +50,7 @@ import org.elasticsearch.search.SearchHits;
 public abstract class EsAbstractBehavior<ENTITY extends Entity, CB extends ConditionBean> extends AbstractBehaviorWritable<ENTITY, CB> {
 
     @Resource
-    protected Client client;
+    private Client client;
 
     protected int sizeForDelete = 100;
     protected String scrollForDelete = "1m";
@@ -60,11 +61,20 @@ public abstract class EsAbstractBehavior<ENTITY extends Entity, CB extends Condi
     protected String scrollSearchTimeout = "3m";
     protected String bulkTimeout = "3m";
     protected String deleteTimeout = "3m";
+    protected String refreshTimeout = "1m";
+
 
     protected abstract String asEsIndex();
     protected abstract String asEsIndexType();
     protected abstract String asEsSearchType();
     protected abstract <RESULT extends ENTITY> RESULT createEntity(Map<String, Object> source, Class<? extends RESULT> entityType);
+
+    // ===================================================================================
+    //                                                                       Elasticsearch
+    //                                                                              ======
+    public RefreshResponse refresh() {
+        return client.admin().indices().prepareRefresh(asEsIndex()).execute().actionGet(refreshTimeout);
+    }
 
     // ===================================================================================
     //                                                                              Select
@@ -115,7 +125,7 @@ public abstract class EsAbstractBehavior<ENTITY extends Entity, CB extends Condi
         esCb.request().build(builder);
         final SearchResponse response = esCb.build(builder).execute().actionGet(searchTimeout);
 
-        final EsPagingResultBean<RESULT> list = new EsPagingResultBean<>();
+        final EsPagingResultBean<RESULT> list = new EsPagingResultBean<>(builder);
         final SearchHits searchHits = response.getHits();
         searchHits.forEach(hit -> {
             final Map<String, Object> source = hit.getSource();
@@ -134,6 +144,9 @@ public abstract class EsAbstractBehavior<ENTITY extends Entity, CB extends Condi
         list.setTotalShards(response.getTotalShards());
         list.setSuccessfulShards(response.getSuccessfulShards());
         list.setFailedShards(response.getFailedShards());
+
+        list.setAggregation(response.getAggregations());
+
         // #pending others
 
         return list;
@@ -457,6 +470,10 @@ public abstract class EsAbstractBehavior<ENTITY extends Entity, CB extends Condi
 
     public void setDeleteTimeout(String deleteTimeout) {
         this.deleteTimeout = deleteTimeout;
+    }
+
+    public void setRefreshTimeout(String refreshTimeout) {
+        this.refreshTimeout = refreshTimeout;
     }
 
     // ===================================================================================
